@@ -1,3 +1,13 @@
+2011-06-09  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Anders Carlsson.
+
+        Add Vector::reverse()
+        https://bugs.webkit.org/show_bug.cgi?id=62393
+
+        * wtf/Vector.h:
+        (WTF::Vector::reverse): Added
+
 2011-06-08  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Oliver Hunt.
